@@ -14,6 +14,11 @@ set(ORTHANC_VERSION "mainline")
 #   * Orthanc 0.9.5 -> mainline      = version 6
 set(ORTHANC_DATABASE_VERSION 6)
 
+# Version of the Orthanc API, can be retrieved from "/system" URI in
+# order to check whether new URI endpoints are available even if using
+# the mainline version of Orthanc
+set(ORTHANC_API_VERSION "1.0")
+
 
 #####################################################################
 ## CMake parameters tunable by the user
